# auto_print

./: .codecov.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  LICENSE  README.html  README.md  auto_print.py  auto_print.spec  build.py  cli.html  config.json  contributing.html  experiments.ipynb  genindex.html  gitlab-ci.yml  index.html  installation.html  main.py  main.spec  msi_setup.py  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  reset_version.py  search.html  searchindex.js  setup.py  test_print.bat  usage.html
.gitea/workflows/: python-test.yml  test-workflow.yml  workflow.yml
.github/: README.md  dependabot.yml  pr-labeler.yml  release-drafter.yml
.github/actions/: python-test.yml  workflow.yml
.github/workflows/: ci.yml  cleanup-preview.yml  dependabot-auto-merge.yml  dependabot-validate.yml  pr-labeler.yml  publish-from-artifacts.yml  release-drafter.yml
_sources/: cli.rst.txt  contributing.rst.txt  index.rst.txt  installation.rst.txt
_static/: documentation_options.js
docs/: cli.rst  conf.py  contributing.rst  index.rst  installation.rst  usage.rst
html/: cli.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  usage.html
html/_sources/: index.rst.txt  installation.rst.txt  usage.rst.txt
html/_static/: documentation_options.js
src/auto_print/: __init__.py  auto_print_config_generator.py  auto_print_execute.py  config_generator.py  execute.py  utils.py
tests/: auto_print_config_generator_test.py  auto_print_execute_test.py  config_generator_test.py  conftest.py  execute_test.py  fixtures_test.py  fixtures_usage_example_test.py  utils_test.py
