[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
follow_imports = "silent"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "cx_Freeze"

[tool.poetry]
authors = ["Philipp Horstenkamp <philipp@horstenkamp.de>"]
description = "A Short programm that checks a file for its filename and routs the file to a printer or the default software to print defined in the OS or any other software."
license = "MIT"
name = "auto-print"
version = "2.0.0a5"

[tool.poetry.dependencies]
case-insensitive-dictionary = "0.2.1"
ghostscript = "^0.7"
python = ">=3.11,<3.14"
pywin32 = {version = ">=306,<311", markers = "sys_platform == 'win32'"}

[tool.poetry.group.build.dependencies]
cx-freeze = "^8.0.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pre-commit = "^2.16.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-argparse = "^0.4.0"
sphinx-intl = "^2.1.0"
sphinx-rtd-theme = "^1.3.0"

[tool.poetry.group.lint.dependencies]
mypy = "^1.0.0"
pip-audit = "*"
ruff = "*"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^4.1.0"
pytest-github-actions-annotate-failures = "^0.2.0"

[tool.poetry.scripts]
auto-print = "auto_print.auto_print_execute:main"
auto-print-config = "auto_print.auto_print_config_generator:main"

[tool.pytest.ini_options]
addopts = "--cov=auto_print --cov-report=xml --cov-report=term"
testpaths = ["tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv"
]
fix = true
# Same as Black.
line-length = 88
# Target Python 3.10.
target-version = "py311"

[tool.ruff.lint]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
ignore = [
  "E501"  # line too long
]
select = [
  "A",  # flake8-builtins
  "ARG",  # flake8-unused-arguments
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",  # pydocstyle
  "E",  # pycodestyle errors
  "ERA",  # eradicate (commented-out code)
  "EXE",  # flake8-executable
  "F",  # pyflakes
  "FBT",  # flake8-boolean-trap
  "FURB",  # Ruff-native idioms
  "I",  # isort
  "N",  # pep8-naming
  "NPY",  # numpy-specific rules
  "PD",  # pandas-vet
  "PERF",  # perflint
  "PIE",  # flake8-pie
  "PL",  # pylint rules
  "PTH",  # flake8-use-pathlib
  "RET",  # flake8-return
  "RUF",  # Ruff-specific rules
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "TID",  # flake8-tidy-imports
  "TRY",  # tryceratops
  "UP"  # pyupgrade
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "ARG001", "PLR0913", "TRY003"]

[tool.ruff.lint.pydocstyle]
convention = "google"
